# django-site

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/app/: celery.py  config.py  dev_settings.py  middleware.py  settings.py  urls.py  views.py
app/polls/: admin.py  models.py  urls.py  views.py
app/polls/migrations/: 0001_initial.py
app/quizzes/: admin.py  errors.py  filter.py  forms.py  middleware.py  models.py  service.py  urls.py  views.py
app/quizzes/migrations/: 0001_initial.py  0002_initial.py  0003_test_status_alter_question_test_alter_test_attempts_and_more.py  0004_remove_test_status_test_has_first_attempt_and_more.py  0005_attemptstate_is_right.py  0006_alter_attemptstate_answer_alter_attemptstate_attempt_and_more.py  0007_alter_test_time_for_complete.py
app/quizzes/utils/: admin.py  constants.py  general.py  models.py  utils.py
app/static/polls/: script.js
app/static/users/: style.css
app/templates/: base.html  home.html  imgload.html  profile.html
app/templates/errors/: user.html
app/templates/polls/: base.html  detail.html  index.html  results.html  tests.html
app/templates/quizzes/: attempts.html  detailquestion.html  detailtest.html  filter.html  results.html  tests.html
app/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  (+1 more)
app/users/: admin.py  backends.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
conf.d/: app.conf
nginx/: Dockerfile  nginx.conf
(+19 files in other folders)
