[tool.poetry]
name = "django-site"
version = "0.1.0"
description = ""
authors = ["alexey <a556077@icloud.com>"]
readme = "README.md"
packages = [{include = "django_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
minio = "^7.1.17"
django-minio-storage = "^0.5.7"
pillow = "^10.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
